remove prod workflow

--- a/DeploymentApp/Pages/Index.cshtml
+++ b/DeploymentApp/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Sample app for deployment to Azure app Service from github..</p>
+    <p>Sample app for deployment to Azure app Service from github CI/CD..</p>
 </div>
